--- a/public/scss/ListSession.css
+++ b/public/scss/ListSession.css
@@ -75,10 +75,15 @@ html {
     html body .content-right .show-content-right .tab-content {
       background: #ffffff; }
       html body .content-right .show-content-right .tab-content .tab-pane {
-        overflow-x: hidden; }
+        overflow: hidden; }
+        html body .content-right .show-content-right .tab-content .tab-pane .current-report {
+          position: relative;
+          border-radius: 30px !important;
+          z-index: 10000 !important;
+          background: #ffffff; }
         html body .content-right .show-content-right .tab-content .tab-pane .btn-zoom-group {
           position: relative;
-          z-index: 1000; }
+          z-index: 999; }
           html body .content-right .show-content-right .tab-content .tab-pane .btn-zoom-group .btn-zoom {
             width: 50px !important;
             position: absolute;
@@ -86,11 +91,12 @@ html {
             top: 0; }
         html body .content-right .show-content-right .tab-content .tab-pane .map {
           height: 500px;
-          overflow: scroll; }
+          z-index: 0; }
           html body .content-right .show-content-right .tab-content .tab-pane .map::-webkit-scrollbar {
             display: none; }
           html body .content-right .show-content-right .tab-content .tab-pane .map #map-office {
-            min-width: 400px !important; }
+            min-width: 400px !important;
+            z-index: 0 !important; }
 
 .ui.multiple.dropdown > .label {
   -webkit-border-radius: 20px !important;
@@ -109,34 +115,20 @@ body {
 
 .sidenav {
   height: 100%;
-  width: 0;
+  width: 250px;
   position: fixed;
-  z-index: 1;
   top: 0;
-  right: 0;
+  right: -250px;
   background-color: #ffffff;
   overflow-x: hidden;
   transition: 0.5s;
-  padding-top: 60px;
+  padding-top: 25px;
   z-index: 10001;
   box-shadow: inset 5px 0 0 0 grey; }
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s; }
-
-.sidenav a:hover {
-  color: #f1f1f1; }
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px; }
+  .sidenav .sideBarSearch .fas {
+    font-size: 21px; }
+  .sidenav .sideBarSearch .closebtn {
+    font-size: 40px;
+    transform: translateX(40px); }
 
 /*# sourceMappingURL=ListSession.css.map */
