--- a/public/scss/ListSession.css
+++ b/public/scss/ListSession.css
@@ -89,7 +89,7 @@ html {
         html body .content-right .show-content-right .tab-content .tab-pane .current-report {
           position: relative;
           border-radius: 30px !important;
-          z-index: 10000 !important;
+          z-index: 12 !important;
           background: #ffffff; }
         html body .content-right .show-content-right .tab-content .tab-pane .btn-zoom-group {
           position: relative;
@@ -147,8 +147,8 @@ i.icon.delete:before {
     margin-top: 110px; }
     .sidenav .member-infor-detail .avatar {
       border: 2px solid red;
-      width: 60px;
-      height: 60px; }
+      width: 80px;
+      height: 80px; }
     .sidenav .member-infor-detail .more-detail .name {
       font-size: 24px;
       color: #6a6a6a; }
@@ -157,6 +157,45 @@ i.icon.delete:before {
       font-size: 13px; }
     .sidenav .member-infor-detail .more-detail .sub-name {
       font-size: 12px; }
+  .sidenav .title {
+    width: 50%;
+    display: inline-block;
+    text-align: right;
+    float: left;
+    padding-right: 25px; }
+  .sidenav .dob {
+    color: #676767;
+    border-top: 2px solid #cabebe;
+    border-bottom: 2px solid #cabebe; }
+  .sidenav .contact {
+    color: #676767;
+    border-bottom: 2px solid #cabebe; }
+    .sidenav .contact .list-number .number {
+      font-size: 16px; }
+  .sidenav .top-favorite .favarite-title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #b7204d; }
+  .sidenav .top-favorite .title {
+    text-align: left;
+    width: 30%; }
+  .sidenav .top-favorite .progress-bar {
+    width: 40px;
+    height: 9px;
+    border-radius: 20px;
+    background: #b7204d; }
+  .sidenav .top-favorite .number-percent {
+    color: #b7204d; }
+  .sidenav .btn-email {
+    background: #e67787;
+    margin-top: 85px;
+    color: white;
+    font-size: 18px; }
+  .sidenav .more-detail-lg {
+    text-align: right;
+    cursor: pointer; }
+    .sidenav .more-detail-lg img {
+      cursor: pointer; }
   .sidenav .total-profile .one-profile .list-group .list-group-item .avatar {
     width: 40px;
     height: 40px;
