--- a/public/scss/ListSession.scss
+++ b/public/scss/ListSession.scss
@@ -133,7 +133,7 @@ html {
             .current-report{
               position: relative;
               border-radius: 30px!important;
-              z-index: 10000!important;
+              z-index: 12!important;
               background: #ffffff;
             }
             .btn-zoom-group{
@@ -185,10 +185,9 @@ html {
 }
 i.icon.delete:before{
   content: url("./../images/icon/close.png") !important;
-}
+} // end css ui select
 
 //side bar
-
 .sidenav {
   height: 100%;
   width: 250px;
@@ -216,8 +215,8 @@ i.icon.delete:before{
     margin-top: 110px;
     .avatar{
       border: 2px solid red;
-      width: 60px;
-      height: 60px;
+      width: 80px;
+      height: 80px;
     }
     .more-detail{
       .name{
@@ -231,6 +230,63 @@ i.icon.delete:before{
       .sub-name{
         font-size: 12px;
       }
+    }
+
+  }
+  .title{
+    width:  50%;
+    display: inline-block;
+    text-align: right;
+    float: left;
+    padding-right: 25px;
+  }
+
+  .dob{
+    color: #676767;
+    border-top: 2px solid #cabebe;
+    border-bottom: 2px solid #cabebe;
+  }
+  .contact{
+    color: #676767;
+    border-bottom: 2px solid #cabebe;
+    .list-number{
+      .number{
+        font-size: 16px;
+      }
+    }
+
+  }
+  .top-favorite{
+    .favarite-title{
+      font-size: 18px;
+      font-weight: bold;
+      color: #b7204d;
+    }
+    .title{
+      text-align: left;
+      width: 30%;
+    }
+    .progress-bar{
+      width: 40px;
+      height: 9px;
+      border-radius: 20px;
+      background: #b7204d;
+    }
+    .number-percent{
+      color: #b7204d;
+    }
+  }
+  .btn-email{
+    background: #e67787;
+    margin-top: 85px;
+    color: white;
+    font-size: 18px;
+  }
+  .more-detail-lg{
+    text-align: right;
+    cursor: pointer;
+    img{
+      cursor: pointer;
     }
   }
   .total-profile{
@@ -247,8 +303,11 @@ i.icon.delete:before{
       }
     }
   }
-
 }
+
+
+
+
 .avatar{
   width: 40px;
   height: 40px;
