--- a/public/html/scss/daskboard.css
+++ b/public/html/scss/daskboard.css
@@ -21,7 +21,8 @@ html {
       background-image: linear-gradient(-218deg, #6A11CB 0%, #2575FC 100%);
       min-width: 200px; }
       html body #menuLeft .brands-kpmg {
-        width: 220px; }
+        width: 220px;
+        line-height: 30px; }
         html body #menuLeft .brands-kpmg .name-brands {
           font-weight: bold;
           font-size: 24px;
@@ -46,12 +47,12 @@ html {
           margin-bottom: 15px; }
           html body #menuLeft .list-menu ul .nav-item a {
             color: white !important; }
-          html body #menuLeft .list-menu ul .nav-item:hover {
+          html body #menuLeft .list-menu ul .nav-item:hover, html body #menuLeft .list-menu ul .nav-item.active {
             background: #ffffff;
             border-radius: 5px; }
-            html body #menuLeft .list-menu ul .nav-item:hover a {
+            html body #menuLeft .list-menu ul .nav-item:hover a, html body #menuLeft .list-menu ul .nav-item.active a {
               color: #b2b2b2 !important; }
-            html body #menuLeft .list-menu ul .nav-item:hover i {
+            html body #menuLeft .list-menu ul .nav-item:hover i, html body #menuLeft .list-menu ul .nav-item.active i {
               color: #b2b2b2; }
     html body .content-right .acount-user a {
       color: #b2b2b2; }
@@ -121,7 +122,6 @@ html {
   border-radius: 20px !important;
   font-size: 20px;
   color: white;
-  background: #c7007d;
   margin-right: 18px; }
 
 i.icon.delete:before {
