--- a/public/html/scss/daskboard.scss
+++ b/public/html/scss/daskboard.scss
@@ -155,6 +155,9 @@ html {
               border-radius: 30px!important;
               z-index: 12!important;
               background: #ffffff;
+              i{
+                cursor:pointer;
+              }
             }
             .btn-zoom-group{
               position: relative;
