--- a/public/html/scss/daskboard.css
+++ b/public/html/scss/daskboard.css
@@ -328,4 +328,33 @@ i.icon.delete:before {
   #chat-box .chat .input-chat img {
     cursor: pointer; }
 
+.rules-box .modal-dialog {
+  max-width: 60% !important; }
+  .rules-box .modal-dialog .modal-content {
+    position: relative; }
+    .rules-box .modal-dialog .modal-content .title {
+      font-size: 30px;
+      color: #90959a; }
+    .rules-box .modal-dialog .modal-content .list-rule {
+      max-height: 500px;
+      overflow-y: scroll; }
+      .rules-box .modal-dialog .modal-content .list-rule table {
+        color: #90959a; }
+        .rules-box .modal-dialog .modal-content .list-rule table thead th {
+          border-top: 0px !important; }
+    .rules-box .modal-dialog .modal-content .modal-body .back {
+      cursor: pointer; }
+  .rules-box .modal-dialog .btn-create-rule, .rules-box .modal-dialog .btn-add {
+    position: absolute;
+    left: 50%;
+    bottom: 90px;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%); }
+  .rules-box .modal-dialog .btn-add {
+    bottom: 50%;
+    left: 80%; }
+
 /*# sourceMappingURL=daskboard.css.map */
