--- a/public/html/scss/daskboard.scss
+++ b/public/html/scss/daskboard.scss
@@ -500,3 +500,52 @@ i.icon.delete:before{
 
   }
 }
+
+//css modal box rules
+.rules-box{
+  .modal-dialog{
+    max-width: 60% !important;
+    .modal-content{
+      position: relative;
+      .title{
+        font-size: 30px;
+        color: $normalColor;
+      }
+      .list-rule{
+        max-height: 500px;
+        overflow-y: scroll;
+
+        table{
+          color: $normalColor;
+          thead{
+            th{
+              border-top: 0px!important;
+            }
+          }
+        }
+      }
+      .modal-body{
+        .back{
+          cursor: pointer;
+        }
+      }
+    }
+    .btn-create-rule,.btn-add{
+      position: absolute;
+      left: 50%;
+      bottom: 90px;
+      -webkit-transform: translateX(-50%);
+      -moz-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+      -o-transform: translateX(-50%);
+      transform: translateX(-50%);
+
+    }
+    .btn-add{
+      bottom: 50%;
+      left: 80%;
+
+    }
+
+  }
+}
